[package]
name = "portmon"
version = "0.1.0"
edition = "2024"
description = "Live GUI view of every TCP/UDP socket on this machine and which process owns it."
license = "MIT"
readme = "README.md"
repository = "https://github.com/NotNadav/portmon"
keywords = ["netstat", "tcpview", "network", "sockets", "gui"]
categories = ["network-programming", "gui"]

# Smaller, faster release binary.
[profile.release]
opt-level = 3
lto = true
strip = true

[dependencies]
dns-lookup = "3.0.1"
eframe = "0.34.3"
egui_extras = "0.34.3"
netstat2 = "0.11.2"
sysinfo = "0.39.3"
